# Deepseek-Article-Analyzer

./: .gitignore  README.md  main.py  pyproject.toml  start.bat  start.ps1
apps/: .gitignore  ARCHITECTURE.md  README.md  app.py  config.py  main.py  pyproject.toml
apps/src/api/: main.py
apps/src/api/v1/: __init__.py  analyze.py  extraction.py  files.py  mineru.py  papers.py
apps/src/core/: client.py  config.py  logger.py
apps/src/core/clients/: __init__.py  deepseek_client.py  mineru_client.py  oss_client.py
apps/src/schema/: __init__.py  analysis.py  extraction.py  papers.py
apps/src/services/: deepseek_analysis_service.py  mineru_extraction_service.py  oss_service.py  paper_service.py  storage_service.py
playground/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
playground/src/: App.tsx
playground/src/api/: client.ts  extraction.ts  files.ts  mineru.ts  papers.ts  papersManagement.ts
playground/src/components/: Error.tsx  FileUploader.tsx  Layout.tsx  Loading.tsx  Sidebar.tsx
playground/src/hooks/: index.ts  useApi.ts
playground/src/pages/: AnalysisResults.tsx  DeepSeekAnalysis.tsx  Home.tsx  MinerUExtract.tsx  PaperManagement.tsx  PaperUpload.tsx  Upload.tsx  Welcome.tsx
playground/src/utils/: index.ts  storage.ts
