[project]
name = "deepseek-api"
version = "0.1.0"
description = "DeepSeek API client using OpenAI SDK"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "oss2>=2.18.0",
    "python-multipart>=0.0.6",
]
