[project]
name = "paper-reader"
version = "0.1.0"
description = "论文批量读取系统 - 基于MinerU和DeepSeek的PDF论文批量处理系统"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "oss2>=2.18.0",
    "python-multipart>=0.0.6",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
]
